add functionality for radio, dropdown buttons
Co:authored-By: Amanda Otero <Mandystar018@gmail.com>
co-authored-by: David Cole <davidtcole@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>Favorite Animal</h2>
     <div class="radio">
     <label>
-      <input type="radio" name="animal" value="lion">
+      <input type="radio" name="animal" value="lion" checked>
       Lion
     </label>
     <label>
